<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="mic_desc" translatable="false">Mic for search</string>
    <string name="day">Day</string> <!-- Keep 'Day' consistent -->
    <string name="pressure">Pressure</string> <!-- Capitalization corrected -->
    <string name="wind">Wind</string> <!-- Capitalization corrected -->
    <string name="humidity">Humidity</string> <!-- Capitalization corrected -->
    <string name="enter_city_name">Enter city name</string> <!-- Capitalization corrected -->
    <string name="updated_at">Updated at</string> <!-- Capitalization corrected -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="data_not_available">Data not available</string>
    <string name="error_loading_data">Error loading data</string>
</resources>
