<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBGColor"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="5.5"
    tools:context=".MainActivity">

    <!-- Search Bar -->
    <RelativeLayout
        android:id="@+id/editText_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/search_parent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/edittext_bg">

            <ImageView
                android:id="@+id/mic_search_id"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/mic_desc"
                android:scaleType="fitCenter"
                android:src="@drawable/nion_mic_icon" />

            <EditText
                android:id="@+id/city_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/mic_search_id"
                android:layout_toStartOf="@id/search_bar_iv"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="12dp"
                android:background="@null"
                android:gravity="center_horizontal"
                android:hint="@string/enter_city_name"
                android:imeOptions="actionGo"
                android:inputType="textCapCharacters"
                android:maxLength="21"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textHintColor"
                android:textCursorDrawable="@null"
                android:textSize="18sp"
                android:fontFamily="@font/koho_regular" />

            <ImageView
                android:id="@+id/search_bar_iv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/search_bar" />
        </RelativeLayout>
    </RelativeLayout>

    <!-- Place & Time -->
    <RelativeLayout
        android:id="@+id/place_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="32sp"
                android:fontFamily="@font/koho_regular" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-12dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updated_at"
                    android:textColor="@color/textColor"
                    android:textSize="8sp"
                    android:fontFamily="@font/koho_regular"
                    android:letterSpacing="0.1" />

                <TextView
                    android:id="@+id/updated_at_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-4dp"
                    android:text=""
                    android:textAllCaps="true"
                    android:textColor="@color/textColor"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/koho_regular"
                    android:letterSpacing="0.1" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <!-- Weather Icon and Condition -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/linear_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/condition_iv"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:id="@+id/conditionDesc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:text=""
                android:textColor="@color/textColor"
                android:textSize="22sp"
                android:textStyle="bold"
                android:fontFamily="@font/koho_regular"
                android:letterSpacing="0.08" />
        </LinearLayout>
    </RelativeLayout>

    <!-- Temperature Block -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_weight="1"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/center_block_bg">

            <TextView
                android:id="@+id/temp_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textSize="34sp"
                android:fontFamily="@font/koho_regular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/temp_tv"
                android:alpha="0.85"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/min_temp_icon" />

                    <TextView
                        android:id="@+id/min_temp_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textAllCaps="true"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:fontFamily="@font/koho_regular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="end">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/max_temp_icon" />

                    <TextView
                        android:id="@+id/max_temp_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textAllCaps="true"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:fontFamily="@font/koho_regular" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <!-- Pressure, Wind, Humidity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingHorizontal="6dp"
        android:weightSum="3">

        <!-- Pressure -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/pressure_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:fontFamily="@font/koho_regular" />

            <TextView
                android:id="@+id/pressure_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:fontFamily="@font/koho_regular" />
        </LinearLayout>

        <!-- Wind -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/wind_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:fontFamily="@font/koho_regular" />

            <TextView
                android:id="@+id/wind_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:fontFamily="@font/koho_regular" />
        </LinearLayout>

        <!-- Humidity -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/humidity_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:fontFamily="@font/koho_regular" />

            <TextView
                android:id="@+id/humidity_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:fontFamily="@font/koho_regular" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
